# Alloy-Billing

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  docker-compose.yml  prometheus.yml
apps/ingestion_api/: Cargo.toml
apps/ingestion_api/src/: main.rs  worker.rs
libs/billing_core/: Cargo.toml
libs/billing_core/src/: lib.rs
libs/billing_db/: Cargo.toml
libs/billing_db/src/: lib.rs
scripts/: load_test.js  speed_test.js  stress_test.js
tests/: integration_test.rs
